# wsl

./: README.md  SETUP.md  SPEC.md  claude-stitution.wvf  create-main-branch.sh  example.wsl  example.wvf  system.md
.codey/transcripts/: 000000.json
.github/workflows/: build.yml  create-main-branch.yml  evals.yml
agent/: Cargo.toml
agent/src/: main.rs
evals/: __init__.py  cli.py  evaluator.py  runner.py  worldview_prompt.py
evals/common/: __init__.py  config.py  llm_clients.py
evals/read_eval/: __init__.py  runner.py  test_cases.py
evals/write_eval/: __init__.py  runner.py
validator/: Cargo.toml
validator/src/: lib.rs  main.rs
