[package]
name = "worldview-validator"
version = "0.1.0"
edition = "2024"
description = "A validator for Worldview format (.wvf) files"
license = "MIT"

[lib]
name = "worldview_validator"
path = "src/lib.rs"

[[bin]]
name = "worldview-validate"
path = "src/main.rs"

[dependencies]
thiserror = "1.0"

[dev-dependencies]
